syntax="proto3";

option go_package = "./pb";

package pb;

import "meta.proto";
import "fc-common.proto";

message LoadModuleRequest {
      string dir = 1;
      string name = 2;
}

message LoadModuleResponse {
    Module module = 1;
    uint64 handle = 2;
}

service Parser {
      rpc LoadModule (LoadModuleRequest) returns (LoadModuleResponse) {}
}

service Handles {
      rpc Release (Handle) returns (Void) {}
}

message NewBrowserRequest {
      uint64 moduleHandle = 1;
      uint64 nodeHandle = 2;
}

service Node {
      rpc NewBrowser(NewBrowserRequest) returns (Handle) {}
}
